samples/_failures_safe/1761401741_d0e2d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e29eac9.c: In function ‘main’:
./samples/SAFE/__tmp_6e29eac9.c:160:16: error: expected ‘)’ at end of input
  160 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_6e29eac9.c:160:5: error: too few arguments to function ‘add_edge’
  160 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_6e29eac9.c:95:5: note: declared here
   95 | int add_edge(struct Graph* g, int from_id, int to_id, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_6e29eac9.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(&g
      |     ^~~~~~~~
